# TiraLibCpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-single-platform.yml
examples/: generate_code.py  generate_code_no_grpc.py  python_client.py  tiramisuserver.proto  tiramisuserver_pb2.py  tiramisuserver_pb2.pyi  tiramisuserver_pb2_grpc.py
generation_scripts/: generate_code_no_grpc.py
include/HermesII/: actions.h  dbhelpers.h  utils.h
include/TiraLibCPP/: actions.h  dbhelpers.h  utils.h
include/hermes_ii/: utils.h
src/: CMakeLists.txt  actions.cc  dbhelpers.cc  server.cc  tiramisuserver.proto  utils.cc  utils.cpp
tests/: CMakeLists.txt  actions_test.cc
utils/scripts/: make_run_example.sh
